--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@ body {
   font-family: $font;
   font-weight: 400;
   background-color: #1F2023;
+  color: $light;
 }
 
 a {
@@ -94,12 +95,68 @@ a {
     padding-left: 15px;
     padding-right: 15px;
   }
-
   .banner {
     display: flex;
     background-image: url(../images/bg-banner.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 50px;
+    padding: 100px 50px;
+    &__title {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 1.1;
+    margin-top: 0;
+    margin-bottom: 20px;
+    }
+    &__btn {
+    display: block;
+    color: $light;
+    width: 100%;
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 110%;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    background-color: $accent;
+    border: 1px solid $accent;
+    border-radius: 20px;
+    padding: 30px;
+    transition: $tr;
+    cursor: pointer;
+    &:hover {
+    background-color: transparent;
+      }
+    }
+  }  
 
+.banner-box {
+  border: 1px solid $light;
+  border-radius: 20px;
+  padding: 30px 332px 30px 30px;
+  position: relative;
+ &__title {
+   font-size: 24px;
+   font-weight: 400;
+   line-height: 110%;
+   letter-spacing: 1.2px;
+   text-transform: uppercase;
+   margin-top: 0;
+   margin-bottom: 30px;
+ }
+  &__text {
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-top: 0;
+    margin-bottom: 0;
+  } 
+  &__img {
+     position: absolute;
+          &._electroguitar {
+          top: -68px;
+          right: -20px;
+     }
   }
+}
