--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,7 @@ body {
   font-weight: 400;
   background-color: #1F2023;
   color: $light;
+  margin: 0;
 }
 
 a {
@@ -13,11 +14,13 @@ a {
 }
 
 .header {
+  width: 100%;
   display: flex;
   align-items: stretch;
   justify-content: space-between;
   height: 71px;
-  position: relative;
+  position: fixed;
+  top: 0;
   &::before {
     content: '';
     display: block;
@@ -28,6 +31,7 @@ a {
     top: 0;
     left: 0;
     z-index: -1;
+    border-radius: 10px 10px 0 0;
   }
    &__logo {
     background-color: $accent; 
@@ -55,16 +59,16 @@ a {
   position: absolute;
   top: 0;
   right: -68px;
-   }
+     }
  }
     &__link {
     color: $light;
     font-size: 20px;
     background-color: $accent;
     padding: 17px 45px 0 45px;
-    border-radius: 0 10px 0 0;
     position: relative;
-    &::before {
+    border-radius: 0 10px 0 0;
+      &::before {
       content: '';
       display: block;
       width: 26px;
@@ -75,7 +79,7 @@ a {
       position: absolute;
       right: 0;
       bottom: -24px;
-}
+      }
     &::after {
       content: '';
       display: block;
@@ -85,7 +89,7 @@ a {
       position: absolute;
       top: 0;
       left: -68px;
-      }
+          }
     }
    }
     .container {
@@ -94,6 +98,8 @@ a {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    box-sizing: border-box;
+
   }
   .banner {
     display: flex;
@@ -102,6 +108,19 @@ a {
     background-size: cover;
     border-radius: 50px;
     padding: 100px 50px;
+    margin-top: 135px;
+    gap: 50px;
+    &__main {
+      flex-basis: 61%;
+    }
+    &__info {
+      flex-basis: calc(39% - 50px);
+    }
+    &__item {
+      border: 1px solid $light; 
+      border-right: none;
+      border-radius: 20px 0 0 20px;
+    }
     &__title {
     font-size: 64px;
     font-weight: 700;
@@ -124,12 +143,13 @@ a {
     padding: 30px;
     transition: $tr;
     cursor: pointer;
-    &:hover {
+    @media(hover: hover) {
+        &:hover {
     background-color: transparent;
       }
     }
   }  
-
+  }
 .banner-box {
   border: 1px solid $light;
   border-radius: 20px;
