--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,6 +21,7 @@ a {
   height: 71px;
   position: fixed;
   top: 0;
+  z-index: 999;
   &::before {
     content: '';
     display: block;
@@ -127,11 +128,23 @@ a {
       position: relative;
       margin-right: 80px;
       padding: 30px;
-      box-sizing:border-box;
-      & + & {
-        margin-top: 19px;
+      box-sizing: border-box;
+      transition: $tr;
+      &:hover {
+        background-color: $accent;
+        border-color: $accent;
+        &::after {
+          opacity: 1;
+        }
+        .banner-decor {
+          background-color: $accent;
+          border-color: $accent;
+        }
       }
-    &::after {
+      & + & {
+        margin-top: 19px ;
+      }
+      &::before {
         content: '';
         width: 80px;
         height: 151px;
@@ -142,12 +155,26 @@ a {
         right: -80px;
         top: 0;
       }
+      &::after {
+        content: '';
+        width: 80px;
+        height: 151px;
+        background-image: url(../images/banner-info-decor-hover.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        position: absolute;
+        right: -80px;
+        top: 0;
+        opacity: 0;
+        transition: $tr;
+      } 
     }
-
+  
     &__text {
       font-size: 24px;
       font-weight: 200;
       line-height: 110%;
+      margin: 0;
       span {
         display: block;
         font-size: 32px;
@@ -160,6 +187,7 @@ a {
       position: absolute;
       top: 0;
       right: - 80px; 
+      transition: $tr;
     }
    
     &__title {
@@ -190,7 +218,7 @@ a {
       }
     }
   }  
-  }
+  
 .banner-box {
   border: 1px solid $light;
   border-radius: 20px;
@@ -221,3 +249,4 @@ a {
      }
   }
 }
+  }
