--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -134,14 +134,14 @@ a {
       &:hover {
         &::before {
           width: 100%;
-          transform: translateX(0) scale(1);
+          transform: scale(1);
           opacity: 1;
          }
           .banner__decor {
           background-color: $accent;
           border-color: $accent;
           &::after {
-            transform: translate(0, 0) scale(1);
+            transform: scale(1);
             opacity: 1;
           }
         }
@@ -162,7 +162,8 @@ a {
         border-radius: 20px 0 0 20px;
         z-index: -1;
         opacity: 0;
-        transform: translateX(50%) scale(0);
+        transform: scale(0);
+        transform-origin: top right ;
         transition: $tr;
       }
   }
@@ -202,7 +203,8 @@ a {
         content: '';
         width: 80px;
         height: 151px;
-        transform: translate(-51%, 0) scale(0);
+        transform: scale(0);
+        transform-origin: top left;
         background-image: url(../images/banner-info-decor-hover.svg);
         background-repeat: no-repeat;
         background-size: contain;
@@ -235,7 +237,7 @@ a {
     padding: 30px;
     transition: $tr;
     cursor: pointer;
-    margin-top: 19px;
+    margin-top: 180px;
    
     @media(hover: hover) {
         &:hover {
