--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@ body {
   background-color: #1F2023;
   color: $light;
   margin: 0;
+  overflow-x: hidden;
 }
 
 a {
@@ -113,6 +114,9 @@ a {
     gap: 50px;
     &__main {
       flex-basis: 61%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
     }
     &__info {
       flex-basis: calc(39% - 50px);
@@ -278,3 +282,42 @@ a {
   
 }
   }
+.tag {
+  display: flex;
+  gap: 64px;
+  animation: move-left 20s infinite linear alternate;
+  margin-top: 150px;
+  margin-bottom: 150px;
+  &:hover {
+    animation-play-state: paused;
+  }
+  &__text {
+    font-size: 24px;
+    font-weight: 200;
+    line-height: 110%;
+    padding: 10px 20px;
+    border: 1px solid $gray;
+    border-radius: 50px;
+    position: relative;
+    &::before {
+      content: '';
+      display: block;
+      width: 16px;
+      height: 16px;
+      background-color: $accent;
+      border-radius: 100%;
+      position: absolute;
+      left: -40px;
+      top: calc(50% - 8px);
+    }
+  }
+}
+
+@keyframes move-left {
+  0% {
+    transform: translate(100%,0);
+  }
+  100% {
+    transform: translate(-100%,0);
+  }
+}
