--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,14 @@ a {
   text-decoration: none;
 }
 
+.title-h2 {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 110%;
+  letter-spacing: 1.6px;
+  text-transform: uppercase;
+}
+
 .header {
   width: 100%;
   display: flex;
@@ -320,4 +328,70 @@ a {
   100% {
     transform: translate(-100%,0);
   }
+}
+
+.course {
+  display: flex;
+  gap: 70px;
+  &__title {
+    flex-basis: 395px;
+  }
+  &__control {
+    margin-top: 40px;
+     }
+  &__content {
+    flex-basis: calc(100% - 395px - 70px);
+    width: calc(100% - 395px - 70px);
+  }
+ 
+    }
+
+.course-control {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+    &__prev, &__next {
+    display: flex;
+    align-items: center;
+    justify-content: center ;
+    width: 70px;
+    height: 70px;
+    border: 1px solid $light;
+    border-radius: 100%;
+    right: inherit;
+    left: inherit;
+    position: inherit;
+      &::after {
+      content: '';
+      display: block;
+      width: 49px;
+      height: 24px;
+      background-repeat: no-repeat;
+      background-size: contain;
+     
+    }
+  }
+  &__prev {
+    &::after {
+  background-image: url(../images/UI/arrow-prev.svg);
+  }
+    }
+    &__next {
+      &::after {
+    background-image: url(../images/UI/arrow-right.svg);
+    }
+  }
+}
+
+.slider-teacher {
+   &__item {
+    background-color: $dark;
+   }
+   &__img {
+    width: 100%;
+   }
+   &:hover {
+    animation-play-state: running;
+  }
+
 }
