--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 body {
   font-family: $font;
   font-weight: 400;
+  line-height: 110%;
   background-color: #1F2023;
   color: $light;
   margin: 0;
@@ -17,9 +18,10 @@ a {
 .title-h2 {
   font-size: 32px;
   font-weight: 700;
-  line-height: 110%;
   letter-spacing: 1.6px;
   text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .header {
@@ -182,8 +184,7 @@ a {
       &__text {
       font-size: 24px;
       font-weight: 200;
-      line-height: 110%;
-      margin: 0;
+       margin: 0;
       span {
         display: block;
         font-size: 32px;
@@ -240,7 +241,6 @@ a {
     width: 100%;
     font-size: 20px;
     font-weight: 600;
-    line-height: 110%;
     letter-spacing: 1px;
     text-transform: uppercase;
     background-color: $accent;
@@ -266,7 +266,6 @@ a {
  &__title {
    font-size: 24px;
    font-weight: 400;
-   line-height: 110%;
    letter-spacing: 1.2px;
    text-transform: uppercase;
    margin-top: 0;
@@ -302,7 +301,6 @@ a {
   &__text {
     font-size: 24px;
     font-weight: 200;
-    line-height: 110%;
     padding: 10px 20px;
     border: 1px solid $gray;
     border-radius: 50px;
@@ -343,8 +341,7 @@ a {
     flex-basis: calc(100% - 395px - 70px);
     width: calc(100% - 395px - 70px);
   }
- 
-    }
+ }
 
 .course-control {
   display: flex;
@@ -356,11 +353,17 @@ a {
     justify-content: center ;
     width: 70px;
     height: 70px;
+    background-color: transparent;
     border: 1px solid $light;
     border-radius: 100%;
     right: inherit;
     left: inherit;
     position: inherit;
+    transition: $tr;
+    &:hover {
+      background-color: $accent;
+      border-color: $accent;
+    }
       &::after {
       content: '';
       display: block;
@@ -385,13 +388,58 @@ a {
 
 .slider-teacher {
    &__item {
+    height: 707px;
     background-color: $dark;
+    border: 1px solid $dark;
+    border-radius: 50px;
+    position: relative;
+    overflow: hidden;
+    transition: $tr;
+    &:hover {
+      border-color: $accent;
+     .slider-teacher__name, 
+     .slider-teacher__grid {
+        opacity: 1;
+      }
+    }
+   }
+   &__grid {
+    position: absolute; 
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: tr;
+
    }
    &__img {
     width: 100%;
+    max-width: 637px;
+    object-fit: cover;
+    position: absolute;
+    bottom: 0;
    }
-   &:hover {
-    animation-play-state: running;
-  }
-
+   &__name {
+    font-size: 24px;
+    font-weight: 400;
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
+    opacity: 0;
+    transition: tr;
+    z-index: 1;
+    &::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 637px;
+      background-repeat: no-repeat;
+      position: absolute;
+      left: -30px;
+      bottom: -30px;
+      z-index: -1;
+    }
+   }
 }
